Convert IDs to Long and update unique constraint naming
Replaced Integer IDs with Long across entities and methods for consistency and scalability. Renamed database unique constraints for better clarity. Integrated Liquibase for DB schema management and implemented initial structure scripts.